<!--
  ~ Copyright(C) Seiko Epson Corporation 2016. All rights reserved.
  ~
  ~ Warranty Disclaimers.
  ~ You acknowledge and agree that the use of the software is at your own risk.
  ~ The software is provided "as is" and without any warranty of any kind.
  ~ Epson and its licensors do not and cannot warrant the performance or results
  ~ you may obtain by using the software.
  ~ Epson and its licensors make no warranties, express or implied, as to non-infringement,
  ~ merchantability or fitness for any particular purpose.
  -->

<resources>
    <string name="app_name">Sample Show Battery Info</string>

    <!-- Layout -->
    <string name="battery_plugged">plugged</string>
    <string name="battery_status">status</string>
    <string name="battery_present">present</string>
    <string name="battery_level">level</string>
    <string name="battery_current">current</string>
    <string name="battery_voltage">voltage</string>
    <string name="battery_temperature">temperature</string>
</resources>
